Modified service files, add validation files